fix(core/pagination): make selection one based and handle overflow gracefully

--- a/packages/core/src/components/pagination/pagination.scss
+++ b/packages/core/src/components/pagination/pagination.scss
@@ -45,7 +45,7 @@
     margin-inline-start: $large-space;
 
     ix-select {
-      width: 4.125rem;
+      width: 4.5rem;
       margin-inline-start: $large-space;
     }
   }
